--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc --project tsconfig.build.json",
-    "start": "node dist/index.js",
+    "start": "tsx dist/index.js",
+    "start:prod": "node dist/index.js",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate"
   },
