--- a/backend/tsconfig.build.json
+++ b/backend/tsconfig.build.json
@@ -1,13 +1,4 @@
 {
   "extends": "./tsconfig.json",
-  "compilerOptions": {
-    "noEmit": false,
-    "allowImportingTsExtensions": false,
-    "moduleResolution": "bundler",
-    "module": "ESNext",
-    "target": "ES2020",
-    "rewriteRelativeImportExtensions": true
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"]
 }
