--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,23 +20,21 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Create and activate virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install --upgrade pip
-
       - name: Install dependencies
         working-directory: ./dataModel
+        run: python -m pip install --upgrade pip && pip install -r requirements.txt
+
+      - name: Prepare deployment package
         run: |
-          source ../venv/bin/activate || source venv/bin/activate
-          pip install -r requirements.txt
+          cd dataModel
+          zip -r ../app.zip .  # zip your python app folder
+        shell: bash
 
       - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: dataModel/**
+          path: app.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -58,10 +56,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'dataTransformer' 
+          app-name: 'dataTransformer'
           slot-name: 'Production'
-          package: 'dataModel'
-
-
-
-
+          package: 'app.zip'
